--- a/app/views/branches/updates.html.erb
+++ b/app/views/branches/updates.html.erb
@@ -2,79 +2,118 @@
 <% cranches = init_branches %>
 
 <div class="carousel-inner">
-<% cranches.each_with_index do |branch, index| %>
-    <div class="carousel-item flex-wrap" id="<%= index %>">
-      <nav class="navbar text-center w-100">
-        <h1 class="display-3">{ <%= branch.name %> }</h1>
-      </nav>
-      <div class="row w-100 justify-content-center m-0 p-4">
-        
-        <% branch.getTeams.each do |i| %>
-        
-          <div class="card">
+<% indx = 0 %>
+<% cranches.each do |branch| %>
 
-            <% 
-              n = d = 0 
-              i.getBuilds.each do |j|
-                n += j.getInfo[2]
-                d += j.getInfo[3]
-              end
-            %>
+    <!-- LOOP THRU EACH 4 CARDS-->
+    <% i_team = 0 %>
+    <% while i_team < branch.getTeams.size %>
+      <% indx += 1 %>
+      <% teamSet = branch.getTeams[i_team..(i_team+2)] %>
+      <% i_team += 3 %>
+      <!-- FRAME FOR EACH 4 -->
+      <div class="carousel-item flex-wrap" id="<%= indx %>">
 
-            <% if 10 * n < 7 * d %>
-              <div class="card-header card-header-danger">
-            <% else %>
-              <div class="card-header card-header-success">
-            <% end %>
-            
-                <h4 class="d-flex justify-content-between"><%= i.name %>
+        <!-- TITLE PER FRAME -->
+        <nav class="navbar text-center w-100">
+          <h1 class="display-3">{ <%= branch.name %> }</h1>
+        </nav>
 
-                  <% if 10 * n < 7 * d %>
-                    <i class="fa fa-times"></i>
-                  <% else %>
-                    <i class="fa fa-check"></i>
-                  <% end %>
-                </h4>
-            </div>
-
-              <div class="card-block ">
-
-              <% i.getBuilds.each do |j| %>
-                <p class="card-text d-flex justify-content-between"><%= j.getInfo[0] %>
-                <% if j.getInfo[3] == 1 %>
-                  <% if j.getInfo[1] == "blue" %>
-                    <i class="fa fa-check-circle"></i>
-                  <% elsif j.getInfo[1] == "red" %>
-                    <i class="fa fa-times-circle"></i>
-                  <% elsif j.getInfo[1] == "yellow" %>
-                    <i class="fa fa-warning"></i>
-                  <% else %>
-                    <i class="fa fa-ban"></i>
-                  <% end %>
-                <% else %>
-                  <span><%= j.getInfo[2] %>/<%= j.getInfo[3] %></span>
-                <% end %>
-                </p>
-              <% end %>
-            </div>
-
-            <% if 10 * n < 7 * d %>
-              <div class="card-footer card-header-danger">
-            <% else %>
-              <div class="card-footer card-header-success">
-            <% end %>
-
-                Last commit by: <br><b><%= commiter(i.commit[1], branch.name) %></b><br>
-                Last ID: <br><b><%= commiter(i.commit[3], "-") %></b><br>
-                Last commit message: <br><b><%= commiter(i.commit[2], "-") %></b>
-
-              </div>
-          </div>
-        
-        <% end %>
+        <!-- THIS DIV IS FOR ALL CARDS IN A FRAME -->
+        <div class="row w-100 justify-content-around flex-nowrap m-0 p-4">
       
-      </div>
-    </div>
+          <!-- GO THROUGH EACH CARD -->
+          <% teamSet.each do |i| %>
+          
+            <!-- DISPLAY CARD -->
+            <div class="card">
+              <% 
+                n = d = 0 
+                i.getBuilds.each do |j|
+                  n += j.getInfo[2]
+                  d += j.getInfo[3]
+                end
+              %>
+              <% if 10 * n < 7 * d %>
+                <div class="card-header card-header-danger">
+              <% else %>
+                <div class="card-header card-header-success">
+              <% end %>
+                  <h4 class="d-flex justify-content-between"><%= i.name %>
+                    <% if 10 * n < 7 * d %>
+                      <i class="fa fa-times"></i>
+                    <% else %>
+                      <i class="fa fa-check"></i>
+                    <% end %>
+                  </h4>
+              </div>
+                <div class="card-block ">
+                <% if not commiter(i.commit[1], "") == "" %> 
+                  <div class="commit-info">
+                    <b><%= commiter(i.commit[1], "")[0..15] %><%= commiter(i.commit[1], "").size > 16 ? "..." : ""  %></b> <small class="badge"><%= commiter(i.commit[3], "")[0..7] %></small><br>
+                    <%= commiter(i.commit[2], "") %>
+                  </div><p></p>
+                <% end %>
+                <% i.getBuilds.each do |j| %>
 
+                  <% if j.getInfo[3] == 1 %>
+
+                    <% if j.getInfo[1] == "blue" %>
+                      <span class="passed">
+                        <p class="card-text d-flex justify-content-between">
+                          <%= j.getInfo[0] %>
+                          <i class="fa fa-check-circle" style="padding-top: 5px;"></i>
+                        </p>
+                      </span>
+                    
+                    <% elsif j.getInfo[1] == "red" %>
+                      <span class="failed">
+                        <p class="card-text d-flex justify-content-between">
+                          <%= j.getInfo[0] %>
+                          <i class="fa fa-times-circle" style="padding-top: 5px;"></i>
+                        </p>
+                      </span>
+                    
+                    <% elsif j.getInfo[1] == "yellow" %>
+                      <span class="unstable">
+                        <p class="card-text d-flex justify-content-between">
+                          <%= j.getInfo[0] %>
+                          <i class="fa fa-warning" style="padding-top: 5px;"></i>
+                        </p>
+                      </span>
+                    
+                    <% else %>
+                      <span class="aborted">
+                        <p class="card-text d-flex justify-content-between">
+                          <%= j.getInfo[0] %>
+                          <i class="fa fa-ban" style="padding-top: 5px; color: #888;"></i>
+                        </p>
+                      </span>
+
+                    <% end %>
+                  
+                  <% else %>
+                    <span class="default">
+                      <p class="card-text d-flex justify-content-between"><%= j.getInfo[0] %>
+                        <span><%= j.getInfo[2] %>/<%= j.getInfo[3] %></span>
+                      </p>
+                    </span>
+                  <% end %>
+                <% end %>
+              </div>
+              <% if 10 * n < 7 * d %>
+                <div class="card-footer card-header-danger">
+              <% else %>
+                <div class="card-footer card-header-success">
+              <% end %>            
+                </div>
+            </div>
+          <% end %> 
+      </div>
+      <!-- ALL CARDS END HERE  -->     
+    </div>
+     <!-- FRAME ENDS HERE -->
+     <% end %> 
 <% end %>
+<!-- CAROUSEL ENDS HERE -->
 </div>
