--- a/app/views/branches/show.html.erb
+++ b/app/views/branches/show.html.erb
@@ -14,6 +14,13 @@
 		
 	</div>
 
+	<div class="form-group">
+		<label>Alert message</label>
+		<textarea class="form-control" readonly>
+			<%= @branch.alertMessage %>
+		</textarea>
+	</div>
+
 	<div class="row">
 		<div class="col-sm-6" id="editbutton">
 			<%= link_to 'Edit', edit_branch_path(@branch) , :class=>"btn btn-secondary"%>
